<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="131dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/lo_recycle_list"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/lo_recycle_img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp"
            
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/iv_recycle_item"
                android:src="@drawable/sample1"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_recycle_name"
            android:text="@string/list_name"
            android:textSize="15sp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/lo_recycle_img"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_recycle_address"
            android:text="@string/list_address"
            android:textSize="12sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toEndOf="@id/lo_recycle_img"
            app:layout_constraintTop_toBottomOf="@id/tv_recycle_name"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_recycle_price"
            android:text="@string/list_price"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/lo_recycle_img"
            app:layout_constraintTop_toBottomOf="@id/tv_recycle_address"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_unit"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tv_recycle_price"
            app:layout_constraintTop_toBottomOf="@id/tv_recycle_address"
            android:layout_marginStart="1dp"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/lo_list_heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/iv_recycle_heart_icon"
                android:src="@drawable/heart_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_recycle_chat"
                android:text="@string/list_num"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_recycle_heart_icon"
                android:layout_marginStart="1dp"
                android:gravity="center|center"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/lo_list_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lo_list_heart"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/iv_recycle_chat_icon"
                android:src="@drawable/chat_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_recycle_like"
                android:text="@string/list_num"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_recycle_chat_icon"
                android:layout_marginStart="1dp"
                android:gravity="center|center"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>