<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPageActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/lo_detail_bottom_bar"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:id="@+id/iv_detail_heart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:src="@drawable/heart_icon"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:id="@+id/v_detail_line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_detail_heart"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_detail_price"
            android:text="@string/list_price"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/v_detail_line"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_detail_price_unit"
            android:text="@string/price_unit"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_detail_price"
            android:layout_marginStart="2dp"
            />

            <TextView
                android:layout_width="90dp"
                android:layout_height="34dp"
                android:text="@string/tochat"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15dp"
                android:background="@drawable/orange_conner_solid_layout"
                android:gravity="center|center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lo_detail_bottom_bar"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:id="@+id/iv_detail_item"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/sample1"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/lo_detail_profile"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_item"
                android:background="@color/white"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/iv_detail_profile"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/apple_profile_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_nickname"
                    android:text="@string/list_name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_detail_profile"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_address"
                    android:text="@string/list_address"
                    android:textSize="17sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_nickname"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_detail_profile"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="15dp"
                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/iv_detail_smile"
                    android:src="@drawable/smile_icon"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_manner_text"
                    android:text="@string/manner_text"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_detail_smile"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manner_temp"
                    android:textColor="@color/bluegreen"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_detail_smile"
                    app:layout_constraintBottom_toTopOf="@id/tv_detail_manner_text"
                    android:layout_marginEnd="10dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/v_detail_line_info"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/lo_detail_profile"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lo_detail_information"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/v_detail_line_info"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_title"
                    android:text="@string/list_name"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_introduce"
                    android:text="@string/list_name"
                    android:textSize="18dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/iv_detail_back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/back_icon"
        />



</androidx.constraintlayout.widget.ConstraintLayout>